services/fd-tagging-tool/src/test/resources/invalid/NoComponentPresent/NoComponentPresent.tg
package invalid.NoComponentPresent;

tagging NoComponentPresent {
    feature Car contains sink2;
}
